// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <span
      class="t-tooltip-trigger"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        type="button"
      >
        <span
          class="t-button__text"
        >
          默认文字提示
        </span>
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    style="margin: 0px auto; width: 500px; height: 260px; position: relative;"
  >
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; top: 0px; left: 42%;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            top
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; top: 0px; left: 70px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            top-left
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; top: 0px; right: 70px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            top-right
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; bottom: 0px; left: 42%;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            bottom
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; bottom: 0px; left: 70px; width: 120px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            bottom-left
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; bottom: 0px; right: 70px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            bottom-right
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; left: 0px; top: 42%;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            left
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; left: 0px; top: 50px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            left-top
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; left: 0px; bottom: 50px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            left-bottom
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; right: 0px; top: 42%;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            right
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; right: 0px; top: 50px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            right-top
          </span>
        </button>
      </span>
    </div>
    <div
      class="t-popup__reference"
    >
      <span
        class="t-tooltip-trigger"
      >
        <button
          class="t-button t-button--theme-default t-button--variant-outline"
          style="position: absolute; right: 0px; bottom: 50px;"
          type="button"
        >
          <span
            class="t-button__text"
          >
            right-bottom
          </span>
        </button>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`duration.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <span
      class="t-tooltip-trigger"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        type="button"
      >
        <span
          class="t-button__text"
        >
          定时消失
        </span>
      </button>
    </span>
  </div>
  <button
    class="t-button t-button--theme-default t-button--variant-outline"
    type="button"
  >
    <span
      class="t-button__text"
    >
      点击再次查看
    </span>
  </button>
</DocumentFragment>
`;

exports[`mouse.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <span
      class="t-tooltip-trigger"
    >
      <a
        href="#"
        id="testa"
      >
        文案比较长...
      </a>
    </span>
  </div>
</DocumentFragment>
`;

exports[`no-arrow.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-popup__reference"
  >
    <span
      class="t-tooltip-trigger"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        type="button"
      >
        <span
          class="t-button__text"
        >
          不带箭头等文字提示
        </span>
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              default
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              primary
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-success t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              success
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-danger t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              danger
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-warning t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              warning
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            type="button"
          >
            <span
              class="t-button__text"
            >
              light
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`trigger.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            type="button"
          >
            <span
              class="t-button__text"
            >
              悬浮时触发（默认）
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <div
            class="t-input__wrap"
          >
            <div
              class="t-input t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="获得焦点时触发"
                type="text"
                value=""
              />
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            type="button"
          >
            <span
              class="t-button__text"
            >
              点击时触发
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-popup__reference"
      >
        <span
          class="t-tooltip-trigger"
        >
          <button
            class="t-button t-button--theme-default t-button--variant-outline"
            type="button"
          >
            <span
              class="t-button__text"
            >
              右击时触发
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
